Fixed text-box alignment

--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -244,7 +244,7 @@ section{
 }
 
 .text-card-text {
-    font-size: 1em;
+    font-size: 1.1em;
     font-style: italic;
     min-height: 60px;
     position: relative;
